tests/fixtures/syntax/valid/action_continuation_basic.repor
case "action continuation across two lines" {
  $ echo one \
    two
  assert { exit 0 }
}
