tests/fixtures/syntax/invalid/action_continuation_marker_before_eof.repor
case "unterminated case after continuation marker" {
  $ echo hi \
